# moola

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  .rsyncignore  11D_PIPELINE_BUILD_SUMMARY.md  AGENTS.md  AGENT_B2_DELIVERABLES_INDEX.md  AMBIGUOUS_FILES_AUDIT.md  ARCHITECTURE_CHANGES.md  ARCHITECTURE_REFACTOR_PLAN.md  AUDIT_REPORT_PRETRAINING.md  AUDIT_RESULTS.txt  AUGMENTATION_FAILURE_ANALYSIS.md  AUGMENTATION_OPTIMIZATION_SUMMARY.md  AUGMENTATION_QUICK_REFERENCE.md  AUGMENTATION_STRATEGY_ANALYSIS.md  BOOTSTRAP_QUICK_REFERENCE.md  CHATGPT_TRAJECTORY_ANALYSIS.md  CLAUDE.md  CLEANLAB_ITERATION_2_GUIDE.md  CLEANUP_IMPLEMENTATION_REPORT.md  CLEANUP_INDEX.md  CLEANUP_MISSION_STATUS.md  CLEANUP_REFACTORING_PLAN.md  CLEANUP_SUMMARY.txt  CLEANUP_SUMMARY_2025-10-27.md  COMPLIANCE_REPORT.md  DATA_COLLECTION_STRATEGY.md  DELIVERABLES_SUMMARY.md  DEPENDENCY_UPGRADE_AUDIT.md  DEPENDENCY_UPGRADE_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_CLEANUP_COMPLETE.md  DUPLICATES_FIXED.md  Dockerfile  Dockerfile.gpu  ENCODER_AUDIT_SUMMARY.md  ENCODER_FIXES_README.md  (+127 more)
.agent/: README.md
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.dvc/: config
.runpod/: AUDIT_SUMMARY.md  CRITICAL_INFRASTRUCTURE_AUDIT.md  DEPLOYMENT_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  MASKED_LSTM_DEPLOYMENT_RUNBOOK.md  MASKED_LSTM_DEPLOYMENT_SUMMARY.md  MASKED_LSTM_PRETRAIN_PROTOCOL.md  MASKED_LSTM_QUICK_START.md  MIGRATION_GUIDE.md  OPTIMIZED_DEPLOYMENT.md  QUICKSTART.md  QUICK_FIX_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_AUDIT.md  RTX_4090_OPTIMIZATION_GUIDE.md  RUNPOD_FIX_SUMMARY.md  SCP_TRANSFER_CHECKLIST.md  SIMPLE_WORKFLOW.md  STORAGE_BREAKDOWN.md  TEMPLATE_PACKAGES.md  TROUBLESHOOTING.md  WORKFLOW_OPTIMIZATION.md  backup-old-workflow.sh  check-connection.sh  clean-storage.sh  deploy-fast.sh  deploy.sh  deploy_fresh_pod.sh  deploy_pretrain_masked_lstm.sh  deploy_simple.sh  full_pipeline_masked_lstm.sh  network-storage.env  runpod  simple-sync.sh  sync-from-storage.sh  sync-scripts-robust.sh  sync-to-storage.sh  verify-template.sh
.taskmaster/: config.json  state.json
archive/: pre-clean-legacy.bundle
benchmarks/: README.md
configs/: cnn_transformer.yaml  default.yaml  phase1_emergency_fixes.json  phase2_data_augmentation.json  phase2_temporal_augmentation.json  phase3_uncertainty.json  phase4_bootstrap.json  phase4_joint_metrics.json  phase4_lr_scheduling.json  simple_lstm.yaml  ssl.yaml  windowed.yaml
databento_scripts/: download_nq_range.py
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  BILSTM_MASKED_AUTOENCODER_INTEGRATION_GUIDE.md  CANDLESTICKS_DATA_REFERENCE.md  CANDLESTICKS_INTEGRATION_GUIDE.md  DATA_MAPPING_SUMMARY.md  DATA_PIPELINE_INDEX.md  DEPENDENCY_MATRIX.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_ABSOLUTE_PATHS.txt  FEATURE_AWARE_PRETRAINING_GUIDE.md  GETTING_STARTED.md  JOINT_METRICS_EXAMPLE.md  LSTM_PERFORMANCE_OPTIMIZATION_SUMMARY.md  MAE_PRETRAINING_GUIDE.md  MOOLA_DATA_DOCUMENTATION_INDEX.md  MOOLA_DATA_PIPELINE_ANALYSIS.md  PERFORMANCE_TUNING.md  PHASE4_LR_SCHEDULING_SUMMARY.md  RELATIVE_FEATURES.md  RUNPOD_BULLETPROOF_WORKFLOW.md  RUNPOD_CHEATSHEET.md  RUNPOD_DEPENDENCY_ANALYSIS.md  RUNPOD_QUICKSTART.md  UTILITY_MODULES_GUIDE.md  WINDOW_ID_MAPPING.md  data_infra_quickstart.md  data_infrastructure.md  runpod_orchestrator_runbook.md  ts_tcc_pretraining_status.md
examples/: multitask_pointer_training.py  phase3_uncertainty_example.py  phase4_joint_metrics_demo.py  runpod_quickstart.py
hooks/: context_reminder.py  posttooluse.sh  pretooluse.py  userpromptsubmit.sh
monitoring/: prometheus.yml
moola-sdk/: .env.example  .gitignore  README.md  main.py  requirements.txt
reports/: CRITICAL_REASSESSMENT.md  FORENSIC_AUDIT_DELIVERABLES.md  HOPSKETCH_TCN_ARCHITECTURE_ANALYSIS.md  SAFETY_VERIFICATION.md  data_quality_forensic_report.md  fix_proposal.md  forensic_audit_summary.md  implementation_summary.md  phase2_results.csv  runpod_backup_manifest.md
scratch/: README.md
scripts/: BATCH_200_DELIVERY_SUMMARY.md  BATCH_200_INDEX.md  BATCH_EXTRACTION_QUICK_REF.md  EXTRACT_BATCH_200_README.md  MLOPS_ORCHESTRATION_README.md  QUICKSTART.md  STRUCTURE_LABELS_README.md  analyze_experiment_comparison.py  analyze_experiment_results.py  analyze_pane3_log.py  audit_pretrained_encoder.py  convert_to_cleanlab_format.py  create_cleaned_train.py  demo_bootstrap_ci.py  diagnose_feature_pipeline.py  evaluate_phase2_results.py  extract_reversals.py  finetune_jade.py  forensic_audit_pt4_regions.py  forensic_audit_pt5_architecture.py  import_corrections.py  (+48 more)
(+556 files in other folders)
