[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "moola"
version = "0.1.0"
description = "Moola: clean ML pipeline scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Moola Maintainer" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "loguru>=0.7",
  "click>=8.1",
  "hydra-core>=1.3",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "pyarrow>=14.0",
  "torch>=2.0,<2.3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
  "torch>=2.0,<2.2.3; platform_machine == 'x86_64' and sys_platform == 'darwin'",
]

[project.scripts]
moola = "moola.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1",
  "isort>=5.12",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP"]
