[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "moola"
version = "0.1.0"
description = "Moola: clean ML pipeline scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Moola Maintainer" }]
dependencies = [
  # Core ML & Data Libraries - Paper-Strict Pinned (aligned with requirements.txt)
  "numpy==1.26.4",           # Keep in 1.26.x series (NumPy 2.0+ breaking changes)
  "pandas==2.3.3",            # Upgraded from 2.2.2 (backward compatible)
  "scipy==1.16.1",            # Upgraded from 1.11.4 (backward compatible for moola)
  "scikit-learn==1.7.2",      # Upgraded from 1.5.2 (no breaking changes for moola)
  "xgboost>=2.0,<3.0",
  "imbalanced-learn==0.14.0",

  # PyTorch Ecosystem
  "torch>=2.0,<2.3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
  "torch>=2.0,<2.2.3; platform_machine == 'x86_64' and sys_platform == 'darwin'",
  "torchvision>=0.17,<0.19",
  "pytorch-lightning>=2.4.0,<3.0",
  "torchmetrics>=1.8,<2.0",

  # Data Handling & Validation
  "pyarrow==17.0.0",          # Upgraded from 16.1.0 (backward compatible, bug fixes)
  "pandera==0.26.1",          # Schema validation (no breaking changes)
  
  # Configuration Management
  "click>=8.2,<9.0",
  "typer>=0.17,<1.0",
  "hydra-core>=1.3,<2.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.9,<3.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  
  # Logging & Output
  "loguru>=0.7,<1.0",
  "rich>=14.0,<15.0",
  
  # Utilities
  "joblib>=1.5,<2.0",
  
  # AI Integration (Optional)
  "openai>=2.3.0",
]

[project.scripts]
moola = "moola.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1",
  "isort>=5.12",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP"]
